--- a/como-ajudar.html
+++ b/como-ajudar.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/output.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="src/output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body class="font-inter">
   <header class="bg-gradient-to-r from-customBlue via-customPink to-customGray">
     <nav class="flex items-center justify-between">
@@ -18,43 +20,53 @@
         <li class="transition-header"><a href="como-ajudar.html">Como Ajudar</a></li>
         <li class="transition-header"><a href="contato.html">Contato</a></li>
         <li class="transition-header"><a href="faq.html">FAQ</a></li>
-        <li><button class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a href="login.html">Login</a></button></li>
+        <li><button
+            class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a
+              href="login.html">Login</a></button></li>
       </ul>
     </nav>
-  </header> 
+  </header>
   <main class="m-20">
     <div class="flex justify-center">
-      <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
+      <div
+        class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
         <h1 class="font-bold text-6xl mt-4">RRL</h1>
         <h2 class="text-customButton text-2xl mb-4">De que forma você pode contribuir?</h2>
       </div>
     </div>
     <div class="mt-28 space-y-14">
-        <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Ações Sociais</h3>
-            <p class="text-xl text-customButton">
-                Participando das ações sociais divulgadas, você consegue auxiliar com seu tempo e trabalho. Sua ajuda pode ser a diferença para a vida de muitas pessoas.
-                Sopões para sem-teto são um bom exemplo de ações sociais que são divulgadas frequentemente na nossa plataforma.
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Trabalhos voluntariados</h3>
-            <p class="text-xl text-customButton">
-                Trabalhos voluntários são umas das melhores formas de contribuir com o seu tempo. Ao se voluntariar, você consegue ajudar de perto àqueles que mais precisam e realmente fazer a diferença na separação de doações, alimentando animais, auxiliando em abrigos, etc.
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Campanhas de Doação</h3>
-            <p class="text-xl text-customButton">
-                Doações de sangue, de alimentos, de roupas, brinquedos, enter outras doações também são ótimas maneiras de contribuir com o próximo. Se você tiver aquele brinquedo parado em casa ou aquela blusa que não serve mais, faça a sua parte e redistribua para quem mais precisa.
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">ONGs e demais instituições</h3>
-            <p class="text-xl text-customButton">
-                Caso você não possa contribuir fisicamente, sua doação em dinheiro também pode ser extremamente importante para garantir a sobrevivência de ONGs e demais instituições sem fins lucrativos. 
-            </p>
-        </div>
+      <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Ações Sociais</h3>
+        <p class="text-xl text-customButton">
+          Participando das ações sociais divulgadas, você consegue auxiliar com seu tempo e trabalho. Sua ajuda pode ser
+          a diferença para a vida de muitas pessoas.
+          Sopões para sem-teto são um bom exemplo de ações sociais que são divulgadas frequentemente na nossa
+          plataforma.
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Trabalhos voluntariados</h3>
+        <p class="text-xl text-customButton">
+          Trabalhos voluntários são umas das melhores formas de contribuir com o seu tempo. Ao se voluntariar, você
+          consegue ajudar de perto àqueles que mais precisam e realmente fazer a diferença na separação de doações,
+          alimentando animais, auxiliando em abrigos, etc.
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Campanhas de Doação</h3>
+        <p class="text-xl text-customButton">
+          Doações de sangue, de alimentos, de roupas, brinquedos, enter outras doações também são ótimas maneiras de
+          contribuir com o próximo. Se você tiver aquele brinquedo parado em casa ou aquela blusa que não serve mais,
+          faça a sua parte e redistribua para quem mais precisa.
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">ONGs e demais instituições</h3>
+        <p class="text-xl text-customButton">
+          Caso você não possa contribuir fisicamente, sua doação em dinheiro também pode ser extremamente importante
+          para garantir a sobrevivência de ONGs e demais instituições sem fins lucrativos.
+        </p>
+      </div>
     </div>
   </main>
   <footer class="bg-gradient-to-r from-customBlue via-customPink to-customGray pb-14 flex justify-between">
@@ -66,7 +78,7 @@
         <a href=""><img class="transition-footer-2" src="public/icon-youtube.png" alt="icon-youtube"></a>
         <a href=""><img class="transition-footer-2" src="public/icon-insta.png" alt="icon-insta"></a>
       </div>
-    </div>  
+    </div>
     <div class="flex gap-24 justify-center mt-8 mr-20">
       <ul class="flex flex-col justify-center gap-6 font-medium">
         <li class="text-black transition-footer"><a href="#">Como Ajudar</a></li>
@@ -83,4 +95,5 @@
     </div>
   </footer>
 </body>
+
 </html>
