--- a/faq.html
+++ b/faq.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/output.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="src/output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body class="font-inter">
   <header class="bg-gradient-to-r from-customBlue via-customPink to-customGray">
     <nav class="flex items-center justify-between">
@@ -18,44 +20,51 @@
         <li class="transition-header"><a href="como-ajudar.html">Como Ajudar</a></li>
         <li class="transition-header"><a href="contato.html">Contato</a></li>
         <li class="transition-header"><a href="faq.html">FAQ</a></li>
-        <li><button class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a href="login.html">Login</a></button></li>
+        <li><button
+            class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a
+              href="login.html">Login</a></button></li>
       </ul>
     </nav>
-  </header> 
+  </header>
   <main class="m-20">
     <div class="flex justify-center">
-      <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
+      <div
+        class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
         <h1 class="font-bold text-6xl mt-4">RRL</h1>
         <h2 class="text-customButton text-2xl mb-4">As perguntas mais feitas</h2>
       </div>
     </div>
     <div class="mt-28 space-y-14">
-        <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">As doações são anônimas?</h3>
-            <p class="text-xl text-customButton">
-                Sim, todas as doações são anônimas para que não haja nenhum tipo de diferenciação entre as doações e seus doadores.
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Posso promover minha própria campanha social?</h3>
-            <p class="text-xl text-customButton">
-                Sim, você pode! <br>
-                Tudo o que você vai precisar é se inscrever na nossa página e cadastrar a sua campanha social. Uma vez aprovada, você poderá começar a ajudar as pessoas!
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Qual o valor mínimo e máximo das doações?</h3>
-            <p class="text-xl text-customButton">
-                Não há um valor máximo, porém estipulamos um valor mínimo de transação de 1 (um) real.
-            </p>
-        </div>
-        <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-            <h3 class="font-semibold text-4xl">Qual a diferença entre as campanhas sociais e os voluntariados?</h3>
-            <p class="text-xl text-customButton">
-                Campanhas sociais são desenvolvidas com o objetivo de arrecadar dinheiro para que determinado objetivo social possa ser cumprido. <br>
-                Já os voluntariados são trabalhos voluntários presenciais em que você dispoe do seu tempo para poder contribuir com a campanha.
-            </p>
-        </div>
+      <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">As doações são anônimas?</h3>
+        <p class="text-xl text-customButton">
+          Sim, todas as doações são anônimas para que não haja nenhum tipo de diferenciação entre as doações e seus
+          doadores.
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Posso promover minha própria campanha social?</h3>
+        <p class="text-xl text-customButton">
+          Sim, você pode! <br>
+          Tudo o que você vai precisar é se inscrever na nossa página e cadastrar a sua campanha social. Uma vez
+          aprovada, você poderá começar a ajudar as pessoas!
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customGray to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Qual o valor mínimo e máximo das doações?</h3>
+        <p class="text-xl text-customButton">
+          Não há um valor máximo, porém estipulamos um valor mínimo de transação de 1 (um) real.
+        </p>
+      </div>
+      <div class="space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
+        <h3 class="font-semibold text-4xl">Qual a diferença entre as campanhas sociais e os voluntariados?</h3>
+        <p class="text-xl text-customButton">
+          Campanhas sociais são desenvolvidas com o objetivo de arrecadar dinheiro para que determinado objetivo social
+          possa ser cumprido. <br>
+          Já os voluntariados são trabalhos voluntários presenciais em que você dispoe do seu tempo para poder
+          contribuir com a campanha.
+        </p>
+      </div>
     </div>
   </main>
   <footer class="bg-gradient-to-r from-customBlue via-customPink to-customGray pb-14 flex justify-between">
@@ -67,7 +76,7 @@
         <a href=""><img class="transition-footer-2" src="public/icon-youtube.png" alt="icon-youtube"></a>
         <a href=""><img class="transition-footer-2" src="public/icon-insta.png" alt="icon-insta"></a>
       </div>
-    </div>  
+    </div>
     <div class="flex gap-24 justify-center mt-8 mr-20">
       <ul class="flex flex-col justify-center gap-6 font-medium">
         <li class="text-black transition-footer"><a href="#">Como Ajudar</a></li>
@@ -84,4 +93,5 @@
     </div>
   </footer>
 </body>
+
 </html>
