--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/output.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="src/output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body class="font-inter">
   <header class="bg-gradient-to-r from-customBlue via-customPink to-customGray">
     <nav class="flex items-center justify-between">
@@ -18,22 +20,26 @@
         <li class="transition-header"><a href="como-ajudar.html">Como Ajudar</a></li>
         <li class="transition-header"><a href="contato.html">Contato</a></li>
         <li class="transition-header"><a href="faq.html">FAQ</a></li>
-        <li><button class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a href="login.html">Login</a></button></li>
+        <li><button
+            class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a
+              href="login.html">Login</a></button></li>
       </ul>
     </nav>
-  </header> 
+  </header>
   <main class="m-20">
     <div class="mt-28 space-y-14">
       <div class="flex justify-center">
-        <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
+        <div
+          class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
           <h1 class="font-bold text-6xl mt-4">RRL</h1>
           <h2 class="text-customButton text-2xl mb-4">Quem são as pessoas que compõem a RRL?</h2>
         </div>
       </div>
       <div class="mt-28 space-y-2 bg-gradient-to-r from-customBlue to-white rounded-xl">
-          <h3 class="font-semibold text-4xl">Missão</h3>
-          <p class="text-xl text-customButton">Promover o bem-estar social e a inclusão através de campanhas inovadoras que mobilizem e empoderem comunidades, transformando vidas e construindo um futuro mais justo e solidário.
-          </p>
+        <h3 class="font-semibold text-4xl">Missão</h3>
+        <p class="text-xl text-customButton">Promover o bem-estar social e a inclusão através de campanhas inovadoras
+          que mobilizem e empoderem comunidades, transformando vidas e construindo um futuro mais justo e solidário.
+        </p>
       </div>
       <div class="space-y-2 bg-gradient-to-r from-customPink to-white rounded-xl">
         <h3 class="font-semibold text-4xl">Valores</h3>
@@ -44,37 +50,37 @@
           Inclusão: Valorizar e respeitar a diversidade, promovendo a equidade.
           Colaboração: Trabalhar em conjunto com parceiros e comunidades para maximizar o impacto.
         </p>
+      </div>
     </div>
-    </div>
-    <div class="grid grid-cols-2 justify-center gap-8 mt-36 mb-60"> 
-        <div class="flex flex-col justify-center items-center gap-16">
-            <img src="public/foto-bruno.png" alt="">
-            <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
-                <p class="font-semibold text-4xl">Bruno Rezende de<br> Lima</p>
-                <p class="text-customButton text-xl">RA: 24081546-2<br> brezendelima@gmail.com</p>
-            </div>
+    <div class="grid grid-cols-2 justify-center gap-8 mt-36 mb-60">
+      <div class="flex flex-col justify-center items-center gap-16">
+        <img src="public/foto-bruno.png" alt="">
+        <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
+          <p class="font-semibold text-4xl">Bruno Rezende de<br> Lima</p>
+          <p class="text-customButton text-xl">RA: 24081546-2<br> brezendelima@gmail.com</p>
         </div>
-        <div class="flex flex-col justify-center items-center gap-16">
-            <img src="public/foto-eduardo.png" alt="">
-            <div class="bg-gradient-to-r from-customPink to-white space-y-2 rounded-xl w-2/3">
-                <p class="font-semibold text-4xl">Eduardo Henrique<br> Ranucci Moreira</p>
-                <p class="text-customButton text-xl">RA: 23041732-2<br> eduardoranucci@outlook.com</p>
-            </div>
+      </div>
+      <div class="flex flex-col justify-center items-center gap-16">
+        <img src="public/foto-eduardo.png" alt="">
+        <div class="bg-gradient-to-r from-customPink to-white space-y-2 rounded-xl w-2/3">
+          <p class="font-semibold text-4xl">Eduardo Henrique<br> Ranucci Moreira</p>
+          <p class="text-customButton text-xl">RA: 23041732-2<br> eduardoranucci@outlook.com</p>
         </div>
-        <div class="flex flex-col justify-center items-center gap-16">
-            <img src="public/foto-lucas.png" alt="">
-            <div class="bg-gradient-to-r from-customGray to-white space-y-2 rounded-xl w-2/3">
-                <p class="font-semibold text-4xl">Lucas Leffel de<br> Lima Uchoa</p>
-                <p class="text-customButton text-xl">RA: 23026525-2<br> lucasleffel@gmail.com</p>
-            </div>
+      </div>
+      <div class="flex flex-col justify-center items-center gap-16">
+        <img src="public/foto-lucas.png" alt="">
+        <div class="bg-gradient-to-r from-customGray to-white space-y-2 rounded-xl w-2/3">
+          <p class="font-semibold text-4xl">Lucas Leffel de<br> Lima Uchoa</p>
+          <p class="text-customButton text-xl">RA: 23026525-2<br> lucasleffel@gmail.com</p>
         </div>
-        <div class="flex flex-col justify-center items-center gap-16">
-            <img src="public/foto-vitor.png" alt="">
-            <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
-                <p class="font-semibold text-4xl">Victor Yuki<br> Matusita</p>
-                <p class="text-customButton text-xl">RA: 23010850-2<br> victormatusita@gmail.com</p>
-            </div>
+      </div>
+      <div class="flex flex-col justify-center items-center gap-16">
+        <img src="public/foto-vitor.png" alt="">
+        <div class="bg-gradient-to-r from-customBlue to-white space-y-2 rounded-xl w-2/3">
+          <p class="font-semibold text-4xl">Victor Yuki<br> Matusita</p>
+          <p class="text-customButton text-xl">RA: 23010850-2<br> victormatusita@gmail.com</p>
         </div>
+      </div>
     </div>
   </main>
   <footer class="bg-gradient-to-r from-customBlue via-customPink to-customGray pb-14 flex justify-between">
@@ -86,7 +92,7 @@
         <a href=""><img class="transition-footer-2" src="public/icon-youtube.png" alt="icon-youtube"></a>
         <a href=""><img class="transition-footer-2" src="public/icon-insta.png" alt="icon-insta"></a>
       </div>
-    </div>  
+    </div>
     <div class="flex gap-24 justify-center mt-8 mr-20">
       <ul class="flex flex-col justify-center gap-6 font-medium">
         <li class="text-black transition-footer"><a href="#">Como Ajudar</a></li>
@@ -103,4 +109,5 @@
     </div>
   </footer>
 </body>
+
 </html>
