--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="src/output.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="src/output.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body class="font-inter">
   <header class="bg-gradient-to-r from-customBlue via-customPink to-customGray">
     <nav class="flex items-center justify-between">
@@ -18,13 +20,16 @@
         <li class="transition-header"><a href="como-ajudar.html">Como Ajudar</a></li>
         <li class="transition-header"><a href="contato.html">Contato</a></li>
         <li class="transition-header"><a href="faq.html">FAQ</a></li>
-        <li><button class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a href="login.html">Login</a></button></li>
+        <li><button
+            class="bg-customButton border border-black hover:text-customButton hover:bg-black hover:border-customButton transition-colors duration-300 ease-in-out rounded-xl py-1.5 px-8 mr-20"><a
+              href="login.html">Login</a></button></li>
       </ul>
     </nav>
-  </header> 
+  </header>
   <main class="m-20">
     <div class="flex justify-center">
-      <div class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
+      <div
+        class="bg-gradient-to-r from-customBlue via-customPink to-customGray flex flex-col items-center w-8/12 rounded-xl shadow-xl gap-8">
         <h1 class="font-bold text-6xl mt-4">RRL</h1>
         <h2 class="text-customButton text-2xl mb-4">Sua página de divulgação de campanhas sociais</h2>
       </div>
@@ -35,7 +40,7 @@
     </div>
     <div class="flex justify-center mb-20">
       <img src="public/banner-junho-vermelho.png" alt="banner-junho-vermelho">
-    </div>  
+    </div>
     <div class="space-y-2 mb-8">
       <h3 class="text-4xl font-semibold">Demais campanhas:</h3>
       <p class="text-2xl text-customButton">Disponíveis na sua região e no Brasil</p>
@@ -82,7 +87,7 @@
         <a href=""><img class="transition-footer-2" src="public/icon-youtube.png" alt="icon-youtube"></a>
         <a href=""><img class="transition-footer-2" src="public/icon-insta.png" alt="icon-insta"></a>
       </div>
-    </div>  
+    </div>
     <div class="flex gap-24 justify-center mt-8 mr-20">
       <ul class="flex flex-col justify-center gap-6 font-medium">
         <li class="text-black transition-footer"><a href="#">Como Ajudar</a></li>
@@ -99,4 +104,5 @@
     </div>
   </footer>
 </body>
+
 </html>
