--- a/area-logada.html
+++ b/area-logada.html
@@ -26,7 +26,8 @@
             </ul>
         </nav>
     </header>
-    <button class="mt-5 ml-5 py-4 px-4 button-edit-del">Editar dados pessoais</button>
+    <button class="mt-5 ml-5 py-4 px-4 button-edit-del" onclick="deslogarUsuario()">Deslogar</button>
+    <button class="mt-5 ml-5 py-4 px-4 button-edit-del"><a href="dados-pessoais.html">Editar dados pessoais</a></button>
     <main class="m-20 flex flex-col justify-center gap-36 items-center">
         <form class="flex flex-col gap-6 mt-8">
             <p class="flex flex-col gap-2">
@@ -121,7 +122,7 @@
         </div>
     </footer>
 
-    <script src="scripts/login.js"></script>
+    <script src="scripts/area-logada.js"></script>
 </body>
 
 </html>
