--- a/dados-pessoais.html
+++ b/dados-pessoais.html
@@ -29,59 +29,39 @@
   <main class="m-20 flex justify-center gap-36 items-center">
     <div>
       <div class="space-y-6">
-        <h2 class="font-bold text-6xl">Crie seu usuário</h2>
-        <p class="text-2xl text-customButton">Crie sua conta e publique suas campanhas</p>
+        <h2 class="font-bold text-6xl">Alterar dados</h2>
       </div>
       <form class="flex flex-col gap-6 mt-8">
         <div class="flex gap-8">
           <p class="flex flex-col gap-2">
             <label class="font-medium" for="nome">Nome</label>
-            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="nome" placeholder="Ex: João">
+            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="nome">
           </p>
           <p class="flex flex-col gap-2">
             <label class="font-medium" for="sobrenome">Sobrenome</label>
-            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="sobrenome" placeholder="Ex: da Silva">
+            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="sobrenome">
           </p>
         </div>
         <div class="flex gap-8">
           <p class="flex flex-col gap-2">
             <label class="font-medium" for="cpf">CPF</label>
-            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cpf" placeholder="000.000.000-00">
+            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cpf">
           </p>
           <p class="flex flex-col gap-2">
             <label class="font-medium" for="cnpj">CNPJ</label>
-            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cnpj" placeholder="00.000.000/0000-00">
+            <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="cnpj">
           </p>
         </div>
         <p class="flex flex-col gap-2">
           <label class="font-medium" for="email">Endereço de e-mail</label>
-          <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-cadastro"
-            placeholder="email@exemplo.com">
+          <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-cadastro">
         </p>
         <p class="flex flex-col gap-2">
           <label class="font-medium" for="senha">Senha</label>
-          <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-cadastro" placeholder="Senh@123!">
+          <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-cadastro">
         </p>
-        <button type="submit" onclick="cadastrarUsuario()"
-          class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Enviar</button>
-      </form>
-    </div>
-    <div>
-      <div class="space-y-6">
-        <h2 class="font-bold text-6xl">Já tem conta?</h2>
-        <p class="text-2xl text-customButton">Faça seu login aqui:</p>
-      </div>
-      <form class="flex flex-col gap-6 mt-8">
-        <p class="flex flex-col gap-2">
-          <label class="font-medium" for="email">Endereço de e-mail</label>
-          <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-login" placeholder="email@exemplo.com">
-        </p>
-        <p class="flex flex-col gap-2">
-          <label class="font-medium" for="senha">Senha</label>
-          <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-login" placeholder="Senh@123!">
-        </p>
-        <button type="submit" onclick="logarUsuario()"
-          class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Enviar</button>
+        <button type="submit"
+          class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Salvar</button>
       </form>
     </div>
   </main>
