--- a/area-logada.html
+++ b/area-logada.html
@@ -32,25 +32,25 @@
         <form class="flex flex-col gap-6 mt-8">
             <p class="flex flex-col gap-2">
                 <label class="font-medium" for="email">Descrição</label>
-                <input class="py-2.5 px-4 border-2 rounded-lg" type="email" id="email-login"
+                <input class="py-2.5 px-4 border-2 rounded-lg" type="text" id="descricao"
                     placeholder="Ex: Campanha do Agasalho">
             </p>
             <div class="flex gap-8">
                 <p class="flex flex-col gap-2">
                     <label class="font-medium" for="senha">Valor meta</label>
-                    <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-login"
+                    <input class="py-2.5 px-4 border-2 rounded-lg" type="number" id="valor"
                         placeholder="Ex: 10.000,00">
                 </p>
                 <p class="flex flex-col gap-2">
                     <label class="font-medium" for="senha">Data limite</label>
-                    <input class="py-2.5 px-4 border-2 rounded-lg" type="password" id="senha-login"
+                    <input class="py-2.5 px-4 border-2 rounded-lg" type="date" id="data"
                         placeholder="15/07/2024">
                 </p>
             </div>
-            <button type="submit"
+            <button type="submit" onclick="criarCampanha()"
                 class="py-4 px-4 bg-black text-white text-xl font-medium rounded-lg hover:text-black hover:bg-slate-200 transition-colors duration-150 ease-in-out">Criar</button>
         </form>
-        <div class="flex justify-center gap-8 w-full">
+        <div class="flex justify-center gap-8 w-full" id="div-campanhas">
             <div
                 class="bg-gradient-to-r from-customBlue to-slate-50 font-medium rounded-xl space-y-12 p-8 shadow-2xl w-1/3">
                 <h4 class="text-xl">Campanha do Agasalho</h4>
@@ -94,6 +94,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </main>
     <footer class="bg-gradient-to-r from-customBlue via-customPink to-customGray pb-14 flex justify-between">
